# llm-vision-robot

./: .gitignore  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
backend/src/agents/: agent.py
backend/src/pipelines/stt/: parakeet_mlx_stt.py  whisper_stt.py
backend/src/pipelines/vlm/: moondream_test.ipynb  moondream_vlm.py
backend/src/prompts/: llm_prompt.py
frontend/my-app/: package-lock.json  package.json
frontend/my-app/src/composables/: useWebsocketControls.js
frontend/my-app/src/views/: AboutView.vue  LikeView.vue  RobotControlsView.vue
frontend/tomoro-bot/src/: App.vue  style.css
frontend/tomoro-bot/src/components/: LikeCounter.vue  SiteNav.vue
frontend/tomoro-bot/src/composables/: useLikes.js
frontend/tomoro-bot/src/router/: index.js
src/agents/: robot.py
src/gpio/: gpio_test.py
src/pipelines/stt/: whisper_mlx_stt.py
src/pipelines/tts/: piper_tts.py
tests/: test_gpio.py  test_motors.py
